implement pdf report implovement